@@ -9,7 +9,7 @@
     <description>
 The Code Size Ruleset contains a collection of rules that find software design related problems.
     </description>
-  
+
     <rule name="ExitExpression"
           since="0.2"
           message = "The {0} {1}() contains an exit expression."
@@ -62,6 +62,24 @@ class Foo {
 }
             ]]>
         </example>
+    </rule>
+
+    <rule name="NumberOfChildren"
+          since="0.2"
+          message = "The class {0} has {1} children. Consider to rebalance this class hierarchy."
+          class="PHP_PMD_Rule_Design_NumberOfChildren"
+          externalInfoUrl="http://phpmd.org/rules/codesize.html#numberofchildren">
+        <description>
+            <![CDATA[
+A class with an excessive number of children is an indicator for an unbalanced
+class hierarchy. You should consider to restructure this structure.
+            ]]>
+        </description>
+        <priority>2</priority>
+        <properties>
+            <property name="minimum" value="15" description="Maximum number of acceptable child classes." />
+        </properties>
+        <example />
     </rule>
 
 </ruleset>
